# eps-g13-buscadorosint

./: CONFIGURACAO_RELATORIO.md  RELATORIO_FINAL.md  RELATORIO_PRONTIDAO_TECNICA.md  pyproject.toml
.github/workflows/: ci.yml
