[tool.poetry]
name = "eps-g13-buscadorosint"
version = "0.1.0"
description = ""
authors = ["AlexandreLJr <ubc183@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
safety = "^2.3.5"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
